...
                </Text>
            </View>
        )
    }

    const UserInfoOrRecipientInfo = function(){
        if (UserRole === 'Sent' || UserRole === 'Received'){
            return (
                <View style = {[cardStyles.ChallengeNameContainer, {flexDirection : 'column', flex : 40}]}>
                    <Text style = {cardStyles.ChallengeNameText}>
                        {SenderOrReceiver + " : "}
                    </Text>
                </View>
...
